--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <audio autoplay>
+        <source src="giaovien.mp3" type="audio/mpeg">
+    </audio>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
     <title>Happy Teacher's Day 20/11</title>
